// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffUtils integration mssql updateJoinTable correctly inserts new entries 1`] = `
Array [
  Object {
    "id": 1,
    "linkType": "primaryAsset",
    "name": "2",
    "orgId": "kiberion",
    "userId": "1",
  },
  Object {
    "id": 2,
    "linkType": "primaryAsset",
    "name": "4",
    "orgId": "kiberion",
    "userId": "3",
  },
  Object {
    "id": 3,
    "linkType": "primaryAsset",
    "name": "6",
    "orgId": "kiberion",
    "userId": "5",
  },
  Object {
    "id": 4,
    "linkType": "primaryAsset",
    "name": "8",
    "orgId": "kiberion",
    "userId": "7",
  },
  Object {
    "id": 5,
    "linkType": "primaryAsset",
    "name": "10",
    "orgId": "kiberion",
    "userId": "9",
  },
  Object {
    "id": 6,
    "linkType": "primaryAsset",
    "name": "12",
    "orgId": "kiberion",
    "userId": "11",
  },
  Object {
    "id": 7,
    "linkType": "primaryAsset",
    "name": "14",
    "orgId": "kiberion",
    "userId": "13",
  },
  Object {
    "id": 8,
    "linkType": "primaryAsset",
    "name": "16",
    "orgId": "kiberion",
    "userId": "15",
  },
  Object {
    "id": 9,
    "linkType": "primaryAsset",
    "name": "18",
    "orgId": "kiberion",
    "userId": "17",
  },
  Object {
    "id": 10,
    "linkType": "primaryAsset",
    "name": "20",
    "orgId": "kiberion",
    "userId": "19",
  },
]
`;

exports[`diffUtils integration mysql updateJoinTable correctly inserts new entries 1`] = `
Array [
  RowDataPacket {
    "id": 1,
    "linkType": "primaryAsset",
    "name": "2",
    "orgId": "kiberion",
    "userId": "1",
  },
  RowDataPacket {
    "id": 2,
    "linkType": "primaryAsset",
    "name": "4",
    "orgId": "kiberion",
    "userId": "3",
  },
  RowDataPacket {
    "id": 3,
    "linkType": "primaryAsset",
    "name": "6",
    "orgId": "kiberion",
    "userId": "5",
  },
  RowDataPacket {
    "id": 4,
    "linkType": "primaryAsset",
    "name": "8",
    "orgId": "kiberion",
    "userId": "7",
  },
  RowDataPacket {
    "id": 5,
    "linkType": "primaryAsset",
    "name": "10",
    "orgId": "kiberion",
    "userId": "9",
  },
  RowDataPacket {
    "id": 6,
    "linkType": "primaryAsset",
    "name": "12",
    "orgId": "kiberion",
    "userId": "11",
  },
  RowDataPacket {
    "id": 7,
    "linkType": "primaryAsset",
    "name": "14",
    "orgId": "kiberion",
    "userId": "13",
  },
  RowDataPacket {
    "id": 8,
    "linkType": "primaryAsset",
    "name": "16",
    "orgId": "kiberion",
    "userId": "15",
  },
  RowDataPacket {
    "id": 9,
    "linkType": "primaryAsset",
    "name": "18",
    "orgId": "kiberion",
    "userId": "17",
  },
  RowDataPacket {
    "id": 10,
    "linkType": "primaryAsset",
    "name": "20",
    "orgId": "kiberion",
    "userId": "19",
  },
]
`;

exports[`diffUtils integration mysql2 updateJoinTable correctly inserts new entries 1`] = `
Array [
  TextRow {
    "id": 1,
    "linkType": "primaryAsset",
    "name": "2",
    "orgId": "kiberion",
    "userId": "1",
  },
  TextRow {
    "id": 2,
    "linkType": "primaryAsset",
    "name": "4",
    "orgId": "kiberion",
    "userId": "3",
  },
  TextRow {
    "id": 3,
    "linkType": "primaryAsset",
    "name": "6",
    "orgId": "kiberion",
    "userId": "5",
  },
  TextRow {
    "id": 4,
    "linkType": "primaryAsset",
    "name": "8",
    "orgId": "kiberion",
    "userId": "7",
  },
  TextRow {
    "id": 5,
    "linkType": "primaryAsset",
    "name": "10",
    "orgId": "kiberion",
    "userId": "9",
  },
  TextRow {
    "id": 6,
    "linkType": "primaryAsset",
    "name": "12",
    "orgId": "kiberion",
    "userId": "11",
  },
  TextRow {
    "id": 7,
    "linkType": "primaryAsset",
    "name": "14",
    "orgId": "kiberion",
    "userId": "13",
  },
  TextRow {
    "id": 8,
    "linkType": "primaryAsset",
    "name": "16",
    "orgId": "kiberion",
    "userId": "15",
  },
  TextRow {
    "id": 9,
    "linkType": "primaryAsset",
    "name": "18",
    "orgId": "kiberion",
    "userId": "17",
  },
  TextRow {
    "id": 10,
    "linkType": "primaryAsset",
    "name": "20",
    "orgId": "kiberion",
    "userId": "19",
  },
]
`;

exports[`diffUtils integration postgres updateJoinTable correctly inserts new entries 1`] = `
Array [
  Object {
    "id": 1,
    "linkType": "primaryAsset",
    "name": "2",
    "orgId": "kiberion",
    "userId": "1",
  },
  Object {
    "id": 2,
    "linkType": "primaryAsset",
    "name": "4",
    "orgId": "kiberion",
    "userId": "3",
  },
  Object {
    "id": 3,
    "linkType": "primaryAsset",
    "name": "6",
    "orgId": "kiberion",
    "userId": "5",
  },
  Object {
    "id": 4,
    "linkType": "primaryAsset",
    "name": "8",
    "orgId": "kiberion",
    "userId": "7",
  },
  Object {
    "id": 5,
    "linkType": "primaryAsset",
    "name": "10",
    "orgId": "kiberion",
    "userId": "9",
  },
  Object {
    "id": 6,
    "linkType": "primaryAsset",
    "name": "12",
    "orgId": "kiberion",
    "userId": "11",
  },
  Object {
    "id": 7,
    "linkType": "primaryAsset",
    "name": "14",
    "orgId": "kiberion",
    "userId": "13",
  },
  Object {
    "id": 8,
    "linkType": "primaryAsset",
    "name": "16",
    "orgId": "kiberion",
    "userId": "15",
  },
  Object {
    "id": 9,
    "linkType": "primaryAsset",
    "name": "18",
    "orgId": "kiberion",
    "userId": "17",
  },
  Object {
    "id": 10,
    "linkType": "primaryAsset",
    "name": "20",
    "orgId": "kiberion",
    "userId": "19",
  },
]
`;

exports[`diffUtils integration sqlite3 updateJoinTable correctly inserts new entries 1`] = `
Array [
  Object {
    "id": 1,
    "linkType": "primaryAsset",
    "name": "2",
    "orgId": "kiberion",
    "userId": "1",
  },
  Object {
    "id": 2,
    "linkType": "primaryAsset",
    "name": "4",
    "orgId": "kiberion",
    "userId": "3",
  },
  Object {
    "id": 3,
    "linkType": "primaryAsset",
    "name": "6",
    "orgId": "kiberion",
    "userId": "5",
  },
  Object {
    "id": 4,
    "linkType": "primaryAsset",
    "name": "8",
    "orgId": "kiberion",
    "userId": "7",
  },
  Object {
    "id": 5,
    "linkType": "primaryAsset",
    "name": "10",
    "orgId": "kiberion",
    "userId": "9",
  },
  Object {
    "id": 6,
    "linkType": "primaryAsset",
    "name": "12",
    "orgId": "kiberion",
    "userId": "11",
  },
  Object {
    "id": 7,
    "linkType": "primaryAsset",
    "name": "14",
    "orgId": "kiberion",
    "userId": "13",
  },
  Object {
    "id": 8,
    "linkType": "primaryAsset",
    "name": "16",
    "orgId": "kiberion",
    "userId": "15",
  },
  Object {
    "id": 9,
    "linkType": "primaryAsset",
    "name": "18",
    "orgId": "kiberion",
    "userId": "17",
  },
  Object {
    "id": 10,
    "linkType": "primaryAsset",
    "name": "20",
    "orgId": "kiberion",
    "userId": "19",
  },
]
`;
